<resources>
    <string name="app_name">Android5Lesson3Dz</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="surname">Surname</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name2">Name :</string>
    <string name="surname2">Surname :</string>
    <string name="age2">Age :</string>
    <string name="register">Register</string>
    <string name="show_deta">Show deta</string>
    <string name="hide_data">Hide data</string>
</resources>