<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.presentation.ui.fragments.auth.AuthUserFragment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#535353"
        app:layout_constraintBottom_toTopOf="@id/et_surname"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="#535353"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#535353"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_surname"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_age"
        android:layout_marginTop="15dp"
        android:text="@string/register"/>

</androidx.constraintlayout.widget.ConstraintLayout>